<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/black">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base_title"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="90dp"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textStyle="bold"
        android:background="@drawable/circle_shape_dark_button"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="5dp"
        android:paddingBottom="5dp"
        />

    <GridLayout
        android:id="@+id/grid_base_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:columnCount="4"
        android:rowCount="4"
        android:orientation="horizontal"
        >

        <TextView android:id="@+id/res_textview"
            android:layout_columnSpan="4"
            android:layout_gravity="fill"
            android:text="@string/zero_sign"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:paddingEnd="15dp"
            android:gravity="right"
            android:layout_marginBottom="10dp" />

        <Button android:id="@+id/delete_res_button"
            android:background="@drawable/circle_shape_light_gray_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/calistoga"
            android:text="@string/delete_sign"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:clickable="true"/>
        <Button android:id="@+id/plus_minus_button"
            android:background="@drawable/circle_shape_light_gray_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/calistoga"
            android:text="@string/plus_minus_sign"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:clickable="true"/>
        <Button android:id="@+id/percent_button"
            android:background="@drawable/circle_shape_light_gray_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/calistoga"
            android:text="@string/percent_sign"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:clickable="true"/>
        <Button android:id="@+id/divide_button"
            android:background="@drawable/circle_shape_orange_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/calistoga"
            android:text="@string/divide_sign"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:clickable="true"/>

        <Button android:id="@+id/seven_sign_button"
            android:background="@drawable/circle_shape_dark_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/calistoga"
            android:text="@string/seven_sign"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:clickable="true"/>

        <Button android:id="@+id/eight_sign_button"
            android:background="@drawable/circle_shape_dark_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/calistoga"
            android:text="@string/eight_sign"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:clickable="true"/>

        <Button android:id="@+id/nine_sign_button"
            android:background="@drawable/circle_shape_dark_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/calistoga"
            android:text="@string/nine_sign"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:clickable="true"/>

        <Button android:id="@+id/multiple_button"
            android:background="@drawable/circle_shape_orange_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/calistoga"
            android:text="@string/multiple_sign"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:clickable="true"/>

        <Button android:id="@+id/fore_sign_button"
            android:background="@drawable/circle_shape_dark_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/calistoga"
            android:text="@string/fore_sign"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:clickable="true"/>

        <Button android:id="@+id/five_sign_button"
            android:background="@drawable/circle_shape_dark_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/calistoga"
            android:text="@string/five_sign"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:clickable="true"/>

        <Button android:id="@+id/six_sign_button"
            android:background="@drawable/circle_shape_dark_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/calistoga"
            android:text="@string/six_sign"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:clickable="true"/>

        <Button android:id="@+id/subtract_button"
            android:background="@drawable/circle_shape_orange_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/calistoga"
            android:text="@string/subtract_sign"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:clickable="true"/>

        <Button android:id="@+id/one_sign_button"
            android:background="@drawable/circle_shape_dark_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/calistoga"
            android:text="@string/one_sign"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:clickable="true"/>

        <Button android:id="@+id/two_sign_button"
            android:background="@drawable/circle_shape_dark_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/calistoga"
            android:text="@string/two_sign"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:clickable="true"/>

        <Button android:id="@+id/three_sign_button"
            android:background="@drawable/circle_shape_dark_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/calistoga"
            android:text="@string/three_sign"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:clickable="true"/>

        <Button android:id="@+id/sum_button"
            android:background="@drawable/circle_shape_orange_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/calistoga"
            android:text="@string/sum_sign"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:clickable="true"/>

        <Button android:id="@+id/zero_sign_button"
            android:layout_height="70dp"
            android:layout_columnSpan="2"
            android:layout_gravity="fill"
            android:background="@drawable/circle_shape_dark_button"
            android:backgroundTint="@color/dark_gray"
            android:fontFamily="@font/calistoga"
            android:gravity="center_vertical"
            android:paddingStart="25dp"
            android:text="@string/zero_sign"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:clickable="true"/>

        <Button android:id="@+id/dot_button"
            android:background="@drawable/circle_shape_dark_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/calistoga"
            android:text="@string/dot_sign"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:clickable="true"/>

        <Button android:id="@+id/equal_button"
            android:background="@drawable/circle_shape_orange_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/calistoga"
            android:text="@string/equal_sign"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:clickable="true"/>

    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>